dist_pkgdata_DATA = alphabet.dtd alphabet.xsl	\
	alphabet.AfaanOromo.xml		\
	alphabet.Armenian.xml		\
	alphabet.Assamese.xml		\
	alphabet.Austen.xml		\
	alphabet.Azerbaijani.xml	\
	alphabet.Belarusian.xml		\
	alphabet.Bulgarian.xml		\
	alphabet.Esperanto.xml		\
	alphabet.Estonian.xml		\
	alphabet.Filipino.xml		\
	alphabet.Greek.xml		\
	alphabet.Gujarati.xml		\
	alphabet.Hawaiian.xml		\
	alphabet.Hebrew.xml		\
	alphabet.Hindi.xml		\
	alphabet.Icelandic.xml		\
	alphabet.Igbo.xml		\
	alphabet.Indonesian.xml		\
	alphabet.IrishGaelic.xml	\
	alphabet.Kannada.xml		\
	alphabet.Katakana.xml		\
	alphabet.Malay.xml		\
	alphabet.Malayalam.xml		\
	alphabet.Marathi.xml		\
	alphabet.Moldavian.xml		\
	alphabet.Ndebele.xml		\
	alphabet.Oriya.xml		\
	alphabet.Punjabi.xml		\
	alphabet.Romanian.xml		\
	alphabet.Sami.xml		\
	alphabet.ScotsGaelic.xml	\
	alphabet.Sepedi.xml		\
	alphabet.Sesotho.xml		\
	alphabet.Sinhala.xml		\
	alphabet.Slovak.xml		\
	alphabet.Slovenian.xml		\
	alphabet.Swati.xml		\
	alphabet.Tajik.xml		\
	alphabet.Tamil.xml		\
	alphabet.Telugu.xml		\
	alphabet.Thai.xml		\
	alphabet.Thai2.xml		\
	alphabet.Tsonga.xml		\
	alphabet.Tswana.xml		\
	alphabet.Turkish.xml		\
	alphabet.Urdu.xml		\
	alphabet.Vietnamese.xml		\
	alphabet.Xhosa.xml		\
	alphabet.Yoruba.xml		\
	alphabet.Zulu.xml		\
	alphabet.abc.xml		\
	alphabet.adangbe.xml		\
	alphabet.afrikaans.xml		\
	alphabet.akan.xml		\
	alphabet.albanian.xml		\
	alphabet.amharic.xml		\
	alphabet.arabic.xml		\
	alphabet.basque.xml		\
	alphabet.bengali.xml		\
	alphabet.bopomofo.xml		\
	alphabet.bopoTrad.xml		\
	alphabet.bosnian.xml		\
	alphabet.breton.xml		\
	alphabet.catalan.xml		\
	alphabet.cangjie.xml		\
	alphabet.cherokee.xml		\
	alphabet.corsican.xml		\
	alphabet.croatian.xml		\
	alphabet.czech.xml		\
	alphabet.danish.xml		\
	alphabet.dutch.xml		\
	alphabet.english.xml		\
	alphabet.englishC.xml		\
	alphabet.ethiopic.xml		\
	alphabet.ewe.xml		\
	alphabet.faroese.xml		\
	alphabet.finnish.xml		\
	alphabet.finnish2.xml		\
	alphabet.french.xml		\
	alphabet.ga.xml			\
	alphabet.galician.xml		\
	alphabet.georgian.xml		\
	alphabet.german.xml		\
	alphabet.hausa.xml		\
	alphabet.hiragana.xml		\
	alphabet.hiragana2.xml		\
	alphabet.hungarian.xml		\
	alphabet.ipa.xml		\
	alphabet.iso8859.xml		\
	alphabet.italian.xml		\
	alphabet.japanese.canna.xml	\
	alphabet.kazakh.xml		\
	alphabet.kirghiz.xml		\
	alphabet.kirundi.xml		\
	alphabet.klingon.xml		\
	alphabet.korean.xml		\
	alphabet.koreanNested.xml	\
	alphabet.kurdish.xml		\
	alphabet.lao.xml		\
	alphabet.latex.xml		\
	alphabet.latin.xml		\
	alphabet.latvian.xml		\
	alphabet.lithuanian.xml		\
	alphabet.luxembourgish.xml	\
	alphabet.macedonian.xml		\
	alphabet.maltese.xml		\
	alphabet.mongolian.xml		\
	alphabet.myanmar.xml		\
	alphabet.nepali.xml		\
	alphabet.norwegian.xml		\
	alphabet.occitan.xml		\
	alphabet.ogham.xml		\
	alphabet.pashto.xml		\
	alphabet.perl.xml		\
	alphabet.persian.xml		\
	alphabet.pinyin2.xml		\
	alphabet.polish.xml		\
	alphabet.portuguese.xml		\
	alphabet.romansch.xml		\
	alphabet.runic.xml		\
	alphabet.russian.xml		\
	alphabet.sanskrit.xml		\
	alphabet.serbian.xml		\
	alphabet.somali.xml		\
	alphabet.spanish.xml		\
	alphabet.spyNew.xml		\
	alphabet.spyTonesNew.xml	\
	alphabet.spyTones2New.xml	\
	alphabet.swahili.xml		\
	alphabet.swedish.xml		\
	alphabet.thaana.xml		\
	alphabet.tigrinya.xml		\
	alphabet.turkmen.xml		\
	alphabet.ukrainian.xml		\
	alphabet.uzbek.xml		\
	alphabet.venda.xml		\
	alphabet.welsh.xml
