EXTRA_DIST = \
		dasher.traditional.glade \
		dasher.direct.glade \
		dasher.compose.glade \
		dasher.fullscreen.glade \
		dasher.gameWIP.glade \
		dasher.preferences.glade \
		dashermaemo.glade \
		dashermaemofullscreen.glade \
		dashermaemo.preferences.glade

pkgdata_DATA = \
		dasher.traditional.glade \
		dasher.direct.glade \
		dasher.compose.glade \
		dasher.fullscreen.glade \
		dasher.gameWIP.glade \
		dasher.preferences.glade \
		dashermaemo.glade \
		dashermaemofullscreen.glade \
		dashermaemo.preferences.glade
