pkgdata_DATA = alphabet.dtd alphabet.xsl training_english_GB.txt colour.dtd $(srcdir)/alphabet*.xml $(srcdir)/colour*.xml controllabels.xml controllabels.dtd

EXTRA_DIST = $(srcdir)/alphabet*.xml $(srcdir)/colour*.xml alphabet.dtd alphabet.xsl colour.dtd controllabels.xml controllabels.dtd training_english_GB.txt
